--- a/package.json
+++ b/package.json
@@ -3,11 +3,14 @@
   "version": "0.5.70",
   "private": true,
   "type": "module",
+  "engines": {
+    "node": ">=20.0.0"
+  },
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "lint": "eslint . --ext .js",
+    "lint": "eslint .",
     "typecheck": "node ./scripts/typecheck.mjs"
   },
   "devDependencies": {
